[workspace]
members = [
    "bin",
]
resolver = "2"

[workspace.dependencies]
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }

clap = "4"
tracing = "0.1.41"
