[workspace]
members = [
    "bin",
    "crates/flash-chainspec",
    "crates/flash-batcher"
, "crates/celestia"]
resolver = "2"

[workspace.dependencies]
reth = {  git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }

op-reth = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-op = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }

reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", version = "1.4.8" }

alloy-primitives = "1.2.1"
clap = "4"
tracing = "0.1.41"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3"
anyhow = "1.0"
tokio = "1.45.1"
futures = "0.3.31"

futures-util = "0.3"
uuid = "1.17.0"

# Database operations
rusqlite = { version = "0.31", features = ["bundled"] }
